@@ -1,3 +1,10 @@
+openmolar (0.3.5+bzr0812-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 25 Apr 2013 00:01:28 +0100
+
+
 openmolar (0.3.4+bzr0807-1~__DIST__0) __DIST__; urgency=low
 
   * rebuild
